--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.86.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.8",
-    "firebase": "^12.6.0",
     "popper.js": "^1.16.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
